# easy-vnc

./: .gitignore  Cargo.toml  PKGBUILD  README.md
assets/: com.github.RuanVasco.easy-remote.desktop  com.github.RuanVasco.easy-vnc.desktop
crates/easy-client/: Cargo.toml  build.rs
crates/easy-client/assets/: windows.manifest
crates/easy-client/src/: config.rs  main.rs
crates/easy-client/src/model/: vnc_connection.rs
crates/easy-client/src/service/: capture.rs  mod.rs  vnc_launcher.rs  webrtc.rs
crates/easy-client/src/ui/: linux.rs  mod.rs  windows.rs
crates/easy-core/: Cargo.toml
crates/easy-core/src/model/: mod.rs  vnc_error.rs  vnc_event.rs
crates/easy-tech/: Cargo.toml
crates/easy-tech/src/: main.rs
crates/easy-tech/src/service/: mod.rs  webrtc_viewer.rs
resources/: style.css
src/: config.rs  main.rs  ui.rs
src/model/: error.rs  mod.rs  vnc_connection.rs  vnc_event.rs
src/service/: vnc_launcher.rs
