[package]
name = "easy-vnc"
version = "0.1.0"
authors = ["Ruan <ruanvasconcelos898@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
description = "Gerenciador de conexões VNC simplificado para suporte técnico."

[dependencies]
directories = "6.0.0"
gtk4 = "=0.10.3"
libadwaita = "0.8.1"
quick-xml = { version = "0.38.4", features = ["serialize"]}
serde = { version = "1.0.228", features = ["derive"] }

[package.metadata.deb]
maintainer = "Ruan <ruanvasconcelos898@gmail.com>"
copyright = "2025, Ruan Vasco"
depends = "$auto, xtightvncviewer, gtk4"

assets = [
    ["target/release/easy-vnc", "usr/bin/", "755"],
    ["assets/com.github.RuanVasco.easy-vnc.desktop", "usr/share/applications/", "644"],
    ["assets/com.github.RuanVasco.easy-vnc.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["assets/entries.xml", "etc/easy-vnc/entries.xml", "644"]
]

conf-files = [
    "/etc/easy-vnc/entries.xml"
]
