[package]
name = "easy-client"
version = "0.1.0"
authors = ["Ruan <ruanvasconcelos898@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Client module for Easy Remote (User side)."

[dependencies]
easy-core = { path = "../easy-core" }

directories = "6.0.0"
async-channel = "2.5.0"
quick-xml = { version = "0.38.4", features = ["serialize"]}
serde = { version = "1.0.228", features = ["derive"] }
xcap = "0.7.1" 
image = "0.25.9"
webrtc = "0.14.0"
anyhow = "1.0.100"
tokio = {version = "1.48.0", features = ["full"]}
bytes = "1.11.0"
local-ip-address = "0.6.6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "=0.10.3"
libadwaita = "0.8.1"

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[package.metadata.deb]
name = "easy-remote-client"
maintainer = "Ruan <ruanvasconcelos898@gmail.com>"
copyright = "2025, Ruan Vasco"
depends = "$auto, x11vnc, wayvnc, libgtk-4-1"

assets = [
    ["target/release/easy-client", "usr/bin/easy-remote-client", "755"],
    ["assets/com.github.RuanVasco.easy-client.desktop", "usr/share/applications/", "644"],
    ["assets/com.github.RuanVasco.easy-client.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["assets/entries.xml", "etc/easy-remote/client/entries.xml", "644"]
]

conf-files = [
    "/etc/easy-remote/client/entries.xml"
]

[build-dependencies]
winres = "0.1"