[package]
name = "easy-tech"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ruan <ruanvasconcelos898@gmail.com>"]
description = "Tech module for Easy Remote (Viewer side)."

[dependencies]
webrtc = "0.14.0"
tokio = {version = "1.48.0", features = ["full"]}
anyhow = "1.0.100"
bytes = "1.11.0"
image = "0.25.9"
async-channel = "=2.5.0"
local-ip-address = "0.6.6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "=0.10.3"
libadwaita = "0.8.1"